--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$app_compact_version"
     implementation "androidx.core:core-ktx:$android_ktx_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
