--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 ext{
     kotlin_version = "1.3.72"
 
-    android_gradle_plugin = "3.6.3"
+    android_gradle_plugin = '4.0.0'
     kotlin_gradle_plugin = kotlin_version
 
     android_ktx_version = "1.2.0"
