--- a/data/build.gradle
+++ b/data/build.gradle
@@ -26,4 +26,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 }
