--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,6 +11,8 @@ ext{
 
     android_ktx_version = "1.2.0"
 
+    retrofit_version = "2.7.1"
+
     app_compact_version = "1.1.0"
     constraint_layout_version = "1.1.3"
 
