--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,6 +5,7 @@ ext{
     target_sdk_version = 29
 
     kotlin_version = "1.3.72"
+    coroutines_version = "1.3.6"
 
     android_gradle_plugin = '4.0.0'
     kotlin_gradle_plugin = kotlin_version
@@ -12,6 +13,7 @@ ext{
     android_ktx_version = "1.2.0"
 
     retrofit_version = "2.7.1"
+    gson_version = "2.8.6"
 
     app_compact_version = "1.1.0"
     constraint_layout_version = "1.1.3"
