--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,4 +19,6 @@ ext{
     constraint_layout_version = "1.1.3"
 
     junit_version = "4.13"
+    mockk_version = "1.9.3"
+    coroutines_test_version = "1.3.5"
 }
