--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,6 +12,8 @@ ext{
 
     android_ktx_version = "1.2.0"
 
+    uniflow_version = "0.10.1"
+
     retrofit_version = "2.7.1"
     gson_version = "2.8.6"
 
