--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -25,8 +25,12 @@ android {
 }
 
 dependencies {
+    implementation project(":domain")
+    implementation project(":design")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "io.uniflow:uniflow-core:$uniflow_version"
+    implementation "io.uniflow:uniflow-androidx:$uniflow_version"
 
     testImplementation "junit:junit:$junit_version"
 }
