--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,6 +12,7 @@ ext{
 
     android_ktx_version = "1.2.0"
 
+    koin_version = "2.0.1"
     uniflow_version = "0.10.1"
 
     retrofit_version = "2.7.1"
@@ -22,5 +23,6 @@ ext{
 
     junit_version = "4.13"
     mockk_version = "1.9.3"
+    androidx_test_version = "2.1.0"
     coroutines_test_version = "1.3.5"
 }
