--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,7 +10,7 @@ ext{
     android_gradle_plugin = '4.0.0'
     kotlin_gradle_plugin = kotlin_version
 
-    android_ktx_version = "1.2.0"
+    android_ktx_version = "1.3.0"
 
     koin_version = "2.0.1"
     uniflow_version = "0.10.1"
@@ -18,7 +18,7 @@ ext{
     retrofit_version = "2.7.1"
     gson_version = "2.8.6"
 
-    app_compact_version = "1.1.0"
+    androidx_version = "1.1.0"
     constraint_layout_version = "1.1.3"
 
     junit_version = "4.13"
