--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,6 +20,7 @@ ext{
 
     androidx_version = "1.1.0"
     constraint_layout_version = "1.1.3"
+    cardview_version = "1.0.0"
 
     junit_version = "4.13"
     mockk_version = "1.9.3"
