[ADD] #8: Added chucker in the app

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
     implementation "org.koin:koin-android:$koin_version"
 
+    debugImplementation "com.github.chuckerteam.chucker:library:$chucker_version"
+
     testImplementation "junit:junit:$junit_version"
     testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_test_version"
