--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,7 +13,7 @@ ext{
     android_ktx_version = "1.3.0"
 
     koin_version = "2.0.1"
-    uniflow_version = "0.10.1"
+    uniflow_version = "0.11.0"
 
     retrofit_version = "2.7.1"
     gson_version = "2.8.6"
@@ -21,6 +21,8 @@ ext{
     androidx_version = "1.1.0"
     constraint_layout_version = "1.1.3"
     cardview_version = "1.0.0"
+
+    chucker_version = "3.2.0"
 
     junit_version = "4.13"
     mockk_version = "1.9.3"
