--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "org.koin:koin-android:$koin_version"
 
     debugImplementation "com.github.chuckerteam.chucker:library:$chucker_version"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:$chucker_version"
 
     testImplementation "junit:junit:$junit_version"
     testImplementation "io.mockk:mockk:$mockk_version"
