Clean build before test

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
     - name: Run Unit Test Cases
-      run: ./gradlew testDebugUnitTest
+      run: ./gradlew clean test
